# XPanelServer

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md
.github/workflows/: build.yml
xplane-panel/: index.html  manifest.json  panel.html  serve.py
xplane-panel/js/: aircraft-profile.js  dataref-registry.js  panel-store.js  panel.js  xplane-api.js
xplane-panel/js/instruments/: airspeed.js  altimeter.js  attitude.js  autopilot.js  base.js  cht.js  egt.js  egtcyl.js  engine.js  flaps.js  fuel.js  gear.js  heading.js  lights.js  obs.js  oil.js  radio.js  transponder.js  vsi.js
xplane-plugin/: CMakeLists.txt  README.md
xplane-plugin/src/: XPanelServer.c
